--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "sonar": "sonar-scanner"
   },
   "private": true,
   "dependencies": {
@@ -38,8 +39,5 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "sonar-scanner": "^3.1.0",
     "typescript": "~4.3.2"
-  },
-  "scripts": {
-    "sonar": "sonar-scanner"
   }
 }
